--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo": "^7.3.0",
+    "@hotwired/turbo-rails": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
